www-root/style-assets/css/inner-style.css
/* ... */
.panel-danger > .panel-heading {
  background: #d63647;
  color: white;
  border-color: #d63647;
}

.panel-danger {
  border: 1px solid #d63647;
}

.footer {
  display: block;
  min-height: 20px;
  padding: 20px;
  background: #00447c;
  margin-left: 0;
  margin-right: 0;
}

.footer a,
.footer p {
  color: #fff;
  font-size: 15px;
  font-weight: 200;
}

.social i {
  word-spacing: 5px;
}

.footer hr {
  opacity: 0.25;
}

.footer-logo {
  text-align: center;
  transform: translate(0%, 10%);
}

.footer-menu {
  line-height: 0.8;
}

.campus-info {
  border: 0;
  border-bottom: 1px solid white;
  margin-bottom: 15px;
}
.campus-info span.fa.fa-map-marker.fa-lg {
  margin-right: 9px;
}
.campus-info span.fa.fa-phone.fa-lg {
  margin-right: 5px;
}

.footer .fa-2x {
  font-size: 1.75em;
}

.footer .fa {
  padding: 0px 5px;
}

div#lhnContainerDone {
  display: none;
}

@media only screen and (max-width: 360px) {
  .social i {
    word-spacing: 1px;
  }
}
@media only screen and (max-width: 767px) {
  .footer-menu {
    text-align: center;
  }

  .social-non-mobile i {
    display: none;
  }

  .footer-logo {
    margin-bottom: 20px;
  }
}
@media only screen and (min-width: 768px) {
  .hide-hr {
    display: none;
  }

  .mobile-msuinfo-show {
    display: none;
  }

  .social-mobile i {
    display: none;
  }

  .campus-info {
    padding-top: 25px;
  }

  .footer-logo {
    transform: translate(0%, 1%);
  }
}
@media only screen and (max-width: 1199px) {
  .campus-info {
    border: 0;
    border-bottom: none;
    margin-bottom: 15px;
  }

  .social-mobile i {
    text-align: center;
  }

  .footer-logo {
    padding-top: 10px;
  }
}
@media only screen and (min-width: 1200px) {
  .campus-info {
    border: 0;
    border-right: 0px solid white;
    border-bottom: 0;
    margin-bottom: 0;
  }

  .campus-info {
    padding-top: 0px;
  }
}
#site-header {
  background: #003a6e;
  margin-bottom: 25px;
  background-size: 100%;
}
#site-header a:hover, #site-header a:active, #site-header a:focus {
  text-decoration: none;
  font-weight: 700;
}
#site-header .siteheader {
  color: #fff;
}
#site-header .breadcrumb {
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0;
  padding: 0;
}
#site-header ul.breadcrumb {
  color: #fff;
  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
  font-size: 1em;
  font-style: normal;
  font-weight: 400;
}
#site-header ul.breadcrumb a {
  color: #fff;
}
@media (max-width: 767px) {
  #site-header .siteheader {
    text-align: right;
    padding-right: 10px;
  }
}

body {
  margin-top: 70px;
  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1rem;
  color: #1e1e1e;
  line-height: 1.6em;
  -webkit-font-smoothing: subpixel-antialiased !important;
  -ms-backface-visibility: hidden;
}

.collapse {
  position: relative;
  height: 0;
  overflow: hidden;
  -webkit-transition: height .35s ease;
  -moz-transition: height .35s ease;
  -o-transition: height .35s ease;
  transition: height 0.35s ease;
}

.linkcolumn a {
  word-break: break-word;
}

.bannerImage {
  max-width: 100%;
  padding: 5px;
  overflow: hidden;
  margin-bottom: 1.5em;
}

.fb-like-box {
  margin-bottom: 1.5em;
}

#fb-root {
  display: none;
}

.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
  width: 100% !important;
  height: 450px;
}

.depsocial {
  margin-bottom: 1.5em;
}

.ie8 .img-responsive {
  display: block;
  height: auto;
  max-width: 100%;
  vertical-align: middle;
  border: 0;
  -ms-interpolation-mode: bicubic;
}

.ie8 .navbar-inverse .navbar-brand {
  color: inherit;
}

.ie8 img {
  display: block;
  height: auto !important;
  max-width: 100%;
  vertical-align: middle;
  border: 0;
  -ms-interpolation-mode: bicubic;
}

img {
  max-width: 100%;
  height: auto;
}

.accordion-group {
  padding: 1em 1em .5em;
  border: 1px solid #e8e8e8;
}

.gsc-search-button.gsc-search-button-v2 {
  width: inherit;
  height: inherit;
}

.navbar-default {
  border: none;
}

.clickable {
  cursor: pointer;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
  font-style: normal;
  font-weight: 400;
}

h1 {
  color: #fff;
  font-size: 2.375rem;
  font-weight: 800;
}

h2 {
  font-weight: 700;
  color: #4e5462;
  font-size: 2.25rem;
  width: 100%;
  margin: 0px;
  margin-bottom: 15px;
  line-height: 1.3;
}

h3 {
  color: #414b63;
  font-size: 1.875em;
  font-weight: 500;
  margin-bottom: 4px;
  margin-top: 2px;
}

h4 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.3;
}

h5 {
  color: #535354;
  font-size: 1.125em;
  font-weight: 700;
}

h6 {
  color: #e74c3c;
  font-size: 13px;
  font-weight: 500;
}

.readmore {
  text-align: right;
  margin-top: 10px;
}

.sup {
  font-size: 80%;
  vertical-align: top;
}

.sub {
  font-size: 80%;
  vertical-align: bottom;
}

.image_caption {
  font-size: 12px;
  line-height: 19px;
  color: #73787e;
}

.bordered {
  box-shadow: 0 0 2px #AAA;
  padding: 9px;
  border: 1px solid #ececec;
}

.well {
  background: #fff;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  margin-bottom: 20px;
  padding: 1.2575em;
}

.nav-header {
  color: #fff;
}

.form-control {
  width: 80%;
}

.img-thumbnail, .thumbnail {
  padding: .5em;
  margin: 1em;
}

.modal-dialog {
  padding-top: 12%;
}

.custom-search-input {
  margin-top: 5px;
  height: 40px;
  padding: 3px;
  border: solid 1px #E4E4E4;
  border-radius: 6px;
  background-color: #fff;
}

.custom-search-input input {
  border: 0;
  box-shadow: none;
}

.custom-search-input button {
  margin: 2px 0 0 0;
  background: none;
  box-shadow: none;
  border: 0;
  color: #003663;
  padding: 0 8px 0 10px;
  border-left: solid 1px #ccc;
}

.custom-search-input button:hover {
  border: 0;
  box-shadow: none;
  border-left: solid 1px #ccc;
  background: none;
  color: #d11242;
}
/* ... */

